src/test/ui/feature-gate/issue-43106-gating-of-deprecated.stderr
error: compilation successful
  --> $DIR/issue-43106-gating-of-deprecated.rs:29:1
   |
LL | / fn main() { //~ ERROR compilation successful
LL | |     println!("Hello World");
LL | | }
   | |_^

error: aborting due to previous error

